// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelNavSection > displays models passed as an object 1`] = `
<DocumentFragment>
  <div>
    <div
      class="nav-sidebar-section d-flex justify-content-between align-items-center px-0 mt-3 mb-1 text-capitalize text-gray-400"
    >
      <span
        class="fw-medium"
      >
        Resources
      </span>
    </div>
    <ul
      class="nav flex-column"
    >
      <li
        class="nav-item"
      >
        <a
          class="px-3 nav-link"
          href="/1/blogs"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="nav-icon me-1"
              fill="currentColor"
            >
              <use
                xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#list"
              />
            </svg>
            <div
              class="ms-2"
            >
              Blogs
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ModelNavSection > displays models passed as string of arrays 1`] = `
<DocumentFragment>
  <div>
    <div
      class="nav-sidebar-section d-flex justify-content-between align-items-center px-0 mt-3 mb-1 text-capitalize text-gray-400"
    >
      <span
        class="fw-medium"
      >
        Resources
      </span>
    </div>
    <ul
      class="nav flex-column"
    >
      <li
        class="nav-item"
      >
        <a
          class="px-3 nav-link"
          href="/1/users"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="nav-icon me-1"
              fill="currentColor"
            >
              <use
                xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#list"
              />
            </svg>
            <div
              class="ms-2"
            >
              Users
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ModelNavSection > displays models returned from function as an object 1`] = `
<DocumentFragment>
  <div>
    <div
      class="nav-sidebar-section d-flex justify-content-between align-items-center px-0 mt-3 mb-1 text-capitalize text-gray-400"
    >
      <span
        class="fw-medium"
      >
        Resources
      </span>
    </div>
    <ul
      class="nav flex-column"
    >
      <li
        class="nav-item"
      >
        <a
          class="px-3 nav-link"
          href="/1/blogs"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="nav-icon me-1"
              fill="currentColor"
            >
              <use
                xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#list"
              />
            </svg>
            <div
              class="ms-2"
            >
              Blogs
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ModelNavSection > displays models returned from function as string of arrays 1`] = `
<DocumentFragment>
  <div>
    <div
      class="nav-sidebar-section d-flex justify-content-between align-items-center px-0 mt-3 mb-1 text-capitalize text-gray-400"
    >
      <span
        class="fw-medium"
      >
        Resources
      </span>
    </div>
    <ul
      class="nav flex-column"
    >
      <li
        class="nav-item"
      >
        <a
          class="px-3 nav-link"
          href="/1/users"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="nav-icon me-1"
              fill="currentColor"
            >
              <use
                xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#list"
              />
            </svg>
            <div
              class="ms-2"
            >
              Users
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ModelNavSection > renders without crashing 1`] = `
<DocumentFragment>
  <div>
    <div
      class="nav-sidebar-section d-flex justify-content-between align-items-center px-0 mt-3 mb-1 text-capitalize text-gray-400"
    >
      <span
        class="fw-medium"
      >
        Resources
      </span>
    </div>
    <ul
      class="nav flex-column"
    >
      <li
        class="nav-item"
      >
        <a
          class="px-3 nav-link"
          href="/1/blogs"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="nav-icon me-1"
              fill="currentColor"
            >
              <use
                xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#list"
              />
            </svg>
            <div
              class="ms-2"
            >
              Blogs
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ModelNavSection > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
